added tophat variable size
Added user input variable to control tophat variable size, helps to further control the size of segmentated dots

--- a/Cellpose-Segmentation.ipynb
+++ b/Cellpose-Segmentation.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-02-07 15:52:02,729 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n"
+      "2022-02-07 16:48:05,888 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n"
      ]
     }
    ],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,6 +380,7 @@
     "#3. Most Important Parameters to tune - LC3+ Detection parameters \n",
     "threshold_LC3 = 0.08 # Intensity threshold (Larger value results in less dots). Typical range: 0.03 - 0.2\n",
     "minimum_dot_size = 10 # The minimum pixel area for a dot to be detected. Likely ~3-15\n",
+    "tophat_size = 4 # White tophat size\n",
     "\n",
     "#4. Cellpose parameters, useful only if cellular segmentation is failing\n",
     "cell_diameter = 200 #Estimate of cell_diamter [pixels] - I find ~200 works well and is faster, despite being an overestimate\n",
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -411,14 +412,14 @@
      "text": [
       "Images Analyzed: 0\n",
       "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/Chiara Project/Images/oneImage/WellB04_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0002.nd2\n",
-      "2022-02-07 16:19:06,938 [INFO] >>>> using CPU\n",
-      "2022-02-07 16:19:07,055 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-02-07 16:19:11,222 [INFO] >>>> TOTAL TIME 4.17 sec\n",
+      "2022-02-07 16:52:38,479 [INFO] >>>> using CPU\n",
+      "2022-02-07 16:52:38,570 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-02-07 16:52:42,564 [INFO] >>>> TOTAL TIME 3.99 sec\n",
       "Images Analyzed: 1\n",
       "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/Chiara Project/Images/oneImage/WellB02_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0000.nd2\n",
-      "2022-02-07 16:19:17,805 [INFO] >>>> using CPU\n",
-      "2022-02-07 16:19:17,894 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-02-07 16:19:22,349 [INFO] >>>> TOTAL TIME 4.46 sec\n",
+      "2022-02-07 16:52:50,182 [INFO] >>>> using CPU\n",
+      "2022-02-07 16:52:50,276 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-02-07 16:52:54,669 [INFO] >>>> TOTAL TIME 4.39 sec\n",
       "Finished, all images analyzed.\n"
      ]
     }
@@ -447,7 +448,7 @@
     "    net_mask = ((mask_cyto>0) - mask_nuclei)>0   \n",
     "\n",
     "    #Segment the LC3+ dots\n",
-    "    LC3_segmented = LC3_segmentation(stack_with_sat,net_mask,threshold = threshold_LC3,minimum_dot_size=minimum_dot_size,display_results=False)\n",
+    "    LC3_segmented = LC3_segmentation(stack_with_sat,net_mask,threshold = threshold_LC3,minimum_dot_size=minimum_dot_size,display_results=False,tophat_size=tophat_size)\n",
     "    labeled_LC3 = label(LC3_segmented)\n",
     "\n",
     "    #Identify with cell LC3+ proteins appear in\n",
@@ -520,7 +521,7 @@
     "\n",
     "        #If you want to speed up significantly, reduce dpi (resolution of images or comment out saving image results)\n",
     "        plt.tight_layout()\n",
-    "        plt.savefig(new_storage_directory+'/results-{0}.tiff'.format(filename[-8:-4]),dpi = resolution)\n",
+    "        plt.savefig(new_storage_directory+'/results-{0}.pdf'.format(filename[-8:-4]),dpi = resolution)\n",
     "        plt.close('all')\n",
     "\n",
     "print('Finished, all images analyzed.')"
