Minor change: updated naming convection of .tiff output files

--- a/Cellpose-Segmentation.ipynb
+++ b/Cellpose-Segmentation.ipynb
@@ -16,111 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (1.20.1)\n",
-      "Requirement already satisfied: nd2reader in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (3.3.0)\n",
-      "Requirement already satisfied: numpy>=1.14 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from nd2reader) (1.20.1)\n",
-      "Requirement already satisfied: pims>=0.3.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from nd2reader) (0.5)\n",
-      "Requirement already satisfied: six>=1.4 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from nd2reader) (1.15.0)\n",
-      "Requirement already satisfied: xmltodict>=0.9.2 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from nd2reader) (0.12.0)\n",
-      "Requirement already satisfied: slicerator>=0.9.8 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from pims>=0.3.0->nd2reader) (1.0.0)\n",
-      "Requirement already satisfied: scikit-image==0.19.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (0.19.1)\n",
-      "Requirement already satisfied: PyWavelets>=1.1.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (1.1.1)\n",
-      "Requirement already satisfied: numpy>=1.17.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (1.20.1)\n",
-      "Requirement already satisfied: networkx>=2.2 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (2.5)\n",
-      "Requirement already satisfied: pillow!=7.1.0,!=7.1.1,!=8.3.0,>=6.1.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (8.1.0)\n",
-      "Requirement already satisfied: imageio>=2.4.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (2.9.0)\n",
-      "Requirement already satisfied: tifffile>=2019.7.26 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (2021.1.11)\n",
-      "Requirement already satisfied: scipy>=1.4.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (1.6.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (20.8)\n",
-      "Requirement already satisfied: decorator>=4.3.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from networkx>=2.2->scikit-image==0.19.1) (4.4.2)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from packaging>=20.0->scikit-image==0.19.1) (2.4.7)\n",
-      "Requirement already satisfied: cellpose in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (0.7.2)\n",
-      "Requirement already satisfied: edt in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (2.1.1)\n",
-      "Requirement already satisfied: tifffile in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (2021.1.11)\n",
-      "Requirement already satisfied: tqdm in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (4.59.0)\n",
-      "Requirement already satisfied: scipy in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (1.6.0)\n",
-      "Requirement already satisfied: fastremap in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (1.12.2)\n",
-      "Requirement already satisfied: opencv-python-headless in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (4.5.5.62)\n",
-      "Requirement already satisfied: numba in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (0.53.0)\n",
-      "Requirement already satisfied: numpy>=1.20.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (1.20.1)\n",
-      "Requirement already satisfied: torch>=1.6 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (1.8.0)\n",
-      "Requirement already satisfied: torch-optimizer in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (0.3.0)\n",
-      "Requirement already satisfied: natsort in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (8.0.2)\n",
-      "Requirement already satisfied: typing-extensions in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from torch>=1.6->cellpose) (4.0.1)\n",
-      "Requirement already satisfied: setuptools in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from numba->cellpose) (49.2.1)\n",
-      "Requirement already satisfied: llvmlite<0.37,>=0.36.0rc1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from numba->cellpose) (0.36.0)\n",
-      "Requirement already satisfied: pytorch-ranger>=0.1.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from torch-optimizer->cellpose) (0.1.1)\n",
-      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (1.4.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from pandas) (2.8.1)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from pandas) (2020.5)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from pandas) (1.20.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.15.0)\n",
-      "Requirement already satisfied: glob2 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (0.7)\n",
-      "Collecting os-sys\n",
-      "  Using cached os_sys-2.1.4-py3-none-any.whl (15.6 MB)\n",
-      "Collecting pynput\n",
-      "  Downloading pynput-1.7.6-py2.py3-none-any.whl (89 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m89.2/89.2 KB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting wmi\n",
-      "  Using cached WMI-1.5.1-py2.py3-none-any.whl (28 kB)\n",
-      "Collecting extract-zip\n",
-      "  Downloading extract_zip-1.0.0-py3-none-any.whl (2.6 kB)\n",
-      "Collecting progressbar\n",
-      "  Downloading progressbar-2.5.tar.gz (10 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting mysql-connector\n",
-      "  Downloading mysql-connector-2.2.9.tar.gz (11.9 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.9/11.9 MB\u001b[0m \u001b[31m15.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting pint>=0.8.1\n",
-      "  Downloading Pint-0.18-py2.py3-none-any.whl (209 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m209.8/209.8 KB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: psutil in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (5.8.0)\n",
-      "Collecting sqlparse\n",
-      "  Downloading sqlparse-0.4.2-py3-none-any.whl (42 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.3/42.3 KB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (1.4.0)\n",
-      "Collecting progress\n",
-      "  Downloading progress-1.6.tar.gz (7.8 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting jupyter\n",
-      "  Using cached jupyter-1.0.0-py2.py3-none-any.whl (2.7 kB)\n",
-      "Requirement already satisfied: pytz in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (2020.5)\n",
-      "Collecting geocoder\n",
-      "  Using cached geocoder-1.38.1-py2.py3-none-any.whl (98 kB)\n",
-      "Collecting sqlalchemy<1.4,>=1.3\n",
-      "  Downloading SQLAlchemy-1.3.24-cp39-cp39-macosx_10_14_x86_64.whl (1.2 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m13.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting tuspy\n",
-      "  Downloading tuspy-0.2.5-py3-none-any.whl (12 kB)\n",
-      "Collecting os-sys-php\n",
-      "  Downloading os_sys_php-2019.10.13-py3-none-any.whl (38.6 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m38.6/38.6 MB\u001b[0m \u001b[31m14.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting spacy==2.2.0\n",
-      "  Using cached spacy-2.2.0.tar.gz (5.8 MB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Installing backend dependencies ... \u001b[?25l\\^C\n",
-      "\u001b[?25canceled\n",
-      "\u001b[31mERROR: Operation cancelled by user\u001b[0m\u001b[31m\n",
-      "\u001b[0mRequirement already satisfied: matplotlib in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (3.3.3)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib) (8.1.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib) (0.10.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib) (1.3.1)\n",
-      "Requirement already satisfied: numpy>=1.15 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib) (1.20.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib) (2.8.1)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib) (2.4.7)\n",
-      "Requirement already satisfied: six in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cycler>=0.10->matplotlib) (1.15.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install numpy\n",
     "!pip install nd2reader\n",
@@ -129,7 +27,7 @@
     "!pip install pandas\n",
     "!pip install glob2\n",
     "!pip install os-sys\n",
-    "!pip install matplotlib\n"
+    "!pip install matplotlib"
    ]
   },
   {
@@ -141,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-02-07 16:48:05,888 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n"
+      "2022-02-09 09:06:44,712 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n"
      ]
     }
    ],
@@ -185,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,12 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#1. Enter the filepath of the folder containing the images to analyze\n",
-    "filepath = '/Users/robertwelch/Desktop/SciLifeLab/Chiara Project/Images/oneImage'\n",
+    "filepath = '/Users/robertwelch/Desktop/SciLifeLab/LCI Workshop/Chiara'\n",
     "\n",
     "#2. Run cell segmentation with GPU?:\n",
     "use_gpu = False # if available, set to: True. Will automatically use CPU if no GPU found.\n",
@@ -403,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -411,15 +309,13 @@
      "output_type": "stream",
      "text": [
       "Images Analyzed: 0\n",
-      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/Chiara Project/Images/oneImage/WellB04_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0002.nd2\n",
-      "2022-02-07 16:52:38,479 [INFO] >>>> using CPU\n",
-      "2022-02-07 16:52:38,570 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-02-07 16:52:42,564 [INFO] >>>> TOTAL TIME 3.99 sec\n",
-      "Images Analyzed: 1\n",
-      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/Chiara Project/Images/oneImage/WellB02_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0000.nd2\n",
-      "2022-02-07 16:52:50,182 [INFO] >>>> using CPU\n",
-      "2022-02-07 16:52:50,276 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-02-07 16:52:54,669 [INFO] >>>> TOTAL TIME 4.39 sec\n",
+      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/LCI Workshop/Chiara/1.5x.nd2\n",
+      "2022-02-09 09:21:31,344 [INFO] >>>> using CPU\n",
+      "2022-02-09 09:21:31,454 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-02-09 09:22:04,114 [INFO] >>>> TOTAL TIME 32.66 sec\n",
+      "2022-02-09 09:22:04,129 [INFO] >>>> using CPU\n",
+      "2022-02-09 09:22:04,251 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-02-09 09:22:08,941 [INFO] >>>> TOTAL TIME 4.69 sec\n",
       "Finished, all images analyzed.\n"
      ]
     }
@@ -435,11 +331,12 @@
     "\n",
     "    #Open Max Intensity Projection Image stack with formatting for cellpose\n",
     "    #stack_with_sat has cytoplasm channel clipped to 95% max intensity, stack_without_sat does not\n",
-    "    stack_with_sat,stack_without_sat = import_stack(filename,min_percentile_cyto=0,max_percentile_cyto=95,min_percentile_nuclei=0,max_percentile_nuclei=100,max_intensity_projection=True)\n",
+    "    stack_with_sat,stack_without_sat = import_stack(filename,min_percentile_cyto=0,max_percentile_cyto=95,\n",
+    "                                                min_percentile_nuclei=0,max_percentile_nuclei=100,max_intensity_projection=True)\n",
     "\n",
     "    #Create Nuclei Mask\n",
     "    mask_nuclei = nuclei_segmentation(stack_with_sat,thresh_nuclei=nuclei_threshold,show_results=False)\n",
-    "    #mask_nuclei = nuclei_segmentation_cellpose(stack_with_sat,diameter = nuclei_diameter,flow_threshold=flow_threshold_nuclei,use_gpu = use_gpu,show_results = False)  \n",
+    "    #mask_nuclei = nuclei_segmentation_cellpose(stack_with_sat,diameter = 30,flow_threshold=0.9,use_gpu = use_gpu,show_results = False)  \n",
     "\n",
     "    #Create Cell Mask\n",
     "    mask_cyto = cell_segmentation(stack_with_sat,diameter = cell_diameter,flow_threshold=flow_threshold_cyto,use_gpu = use_gpu,show_results = False)\n",
@@ -448,7 +345,8 @@
     "    net_mask = ((mask_cyto>0) - mask_nuclei)>0   \n",
     "\n",
     "    #Segment the LC3+ dots\n",
-    "    LC3_segmented = LC3_segmentation(stack_with_sat,net_mask,threshold = threshold_LC3,minimum_dot_size=minimum_dot_size,display_results=False,tophat_size=tophat_size)\n",
+    "    LC3_segmented = LC3_segmentation(stack_with_sat,net_mask,threshold = threshold_LC3,\n",
+    "                                    minimum_dot_size=minimum_dot_size,display_results=False,tophat_size=tophat_size)\n",
     "    labeled_LC3 = label(LC3_segmented)\n",
     "\n",
     "    #Identify with cell LC3+ proteins appear in\n",
@@ -468,8 +366,10 @@
     "    proteins_in_each_cell = proteins_in_each_cell['intensity_min'] # Only output number of proteins, discard cell ID label\n",
     "    proteins_in_each_cell = pd.DataFrame(proteins_in_each_cell) #Re-format to Dataframe object\n",
     "    \n",
-    "    #Results header string - uses last 4 numbers in .nd2 file name\n",
-    "    header = ['LC3+ Count: Image {0}'.format(filename[-8:-4])]\n",
+    "    #Results header string - uses number tag before .nd2 at end of file name\n",
+    "    split_filename = filename.split('/')\n",
+    "    file_number = split_filename[-1][:-4]\n",
+    "    header = ['LC3+ Count: Image {0}'.format(file_number)]\n",
     "\n",
     "    #If First file, write an excel file to store excel results\n",
     "    new_storage_directory = os.path.join(filepath, filepath+'/Results')\n",
@@ -487,16 +387,10 @@
     "        proteins_in_each_cell.to_excel(results_path,index = False,header = header[0])\n",
     "\n",
     "    else:\n",
-    "        #Open Exisisting excel data\n",
+    "        #Open Exisisting excel data and new write data to it\n",
     "        existing_excel = pd.read_excel(results_path)\n",
-    "\n",
-    "        #Add results of new image to existing results\n",
     "        new_excel = pd.concat([existing_excel,proteins_in_each_cell],axis = 1,ignore_index=False)\n",
-    "\n",
-    "        #Rename headers of new data\n",
     "        new_excel = new_excel.rename(columns={'intensity_min':header[0]})\n",
-    "\n",
-    "        #Write new file\n",
     "        new_excel.to_excel(results_path,index = False)\n",
     "\n",
     "    #Save Tiff. Image of results\n",
@@ -521,18 +415,10 @@
     "\n",
     "        #If you want to speed up significantly, reduce dpi (resolution of images or comment out saving image results)\n",
     "        plt.tight_layout()\n",
-    "        plt.savefig(new_storage_directory+'/results-{0}.pdf'.format(filename[-8:-4]),dpi = resolution)\n",
+    "        plt.savefig(new_storage_directory+'/results-{0}.tiff'.format(filename[-8:-4]),dpi = resolution)\n",
     "        plt.close('all')\n",
-    "\n",
     "print('Finished, all images analyzed.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
