Cleaned up Code for Chiara
Made some file context manager changes and cleaned up code for chiara

--- a/Cellpose-Segmentation.ipynb
+++ b/Cellpose-Segmentation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,25 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/skimage/io/manage_plugins.py:23: UserWarning: Your installed pillow version is < 8.1.2. Several security issues (CVE-2021-27921, CVE-2021-25290, CVE-2021-25291, CVE-2021-25293, and more) have been fixed in pillow 8.1.2 or higher. We recommend to upgrade this library.\n",
-      "  from .collection import imread_collection_wrapper\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-02-09 09:06:44,712 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -83,21 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Used to find max intensity projection of ND2 stack for cytoplasm and nuclei channels\n",
     "def nd2_max_projection(nd2_object):\n",
     "    #Get frame dimensions\n",
-    "    z_dim = nd2_object.sizes['z']\n",
-    "    x_dim = nd2_object.frame_shape[0]\n",
-    "    y_dim = nd2_object.frame_shape[1]\n",
-    "    stack = np.empty([z_dim,x_dim,y_dim])\n",
+    "    Z_DIM = nd2_object.sizes['z']\n",
+    "    X_DIM = nd2_object.frame_shape[0]\n",
+    "    Y_DIM = nd2_object.frame_shape[1]\n",
+    "    stack = np.empty([Z_DIM,X_DIM,Y_DIM])\n",
     "\n",
     "    #Import all cytoplasm focal planes\n",
     "    nd2_object.default_coords['c'] = 0 #Cyto Channel\n",
-    "    for z in range(z_dim):\n",
+    "    for z in range(Z_DIM):\n",
     "        stack[z,:,:] = nd2_object[z]\n",
     "\n",
     "    #Calculate maximum intensity projects for cyto channel\n",
@@ -105,7 +89,7 @@
     "\n",
     "    #Import all nuclei focal planes\n",
     "    nd2_object.default_coords['c'] = 1 #Nuclei Channel\n",
-    "    for z in range(z_dim):\n",
+    "    for z in range(Z_DIM):\n",
     "        stack[z,:,:] = nd2_object[z]\n",
     "\n",
     "    #Calculate maximum intensity projects for nuclei channel\n",
@@ -118,26 +102,26 @@
     "    return max_intensity_cyto,max_intensity_nuclei\n",
     "\n",
     "#Used to import ND2 image stacks and return max, intensity projection of cytoplasm and nuclei channels\n",
-    "def import_stack(img_path,focal_plane_cyto=0,focal_plane_nuclei=0,min_percentile_cyto = 0,max_percentile_cyto = 100,min_percentile_nuclei = 0,max_percentile_nuclei = 100,max_intensity_projection = None):\n",
+    "def import_stack(img_path,focal_plane_cyto=0,focal_plane_nuclei=0,min_percentile_cyto = 0,\n",
+    "                 max_percentile_cyto = 100,min_percentile_nuclei = 0,max_percentile_nuclei = 100,\n",
+    "                 max_intensity_projection = None):\n",
     "\n",
-    "  #Create nd2 image object\n",
-    "    nd2_object = ND2Reader(img_path)\n",
+    "  #Open ND2 file as object\n",
+    "    with ND2Reader(img_path) as nd2_object:\n",
     "\n",
     "  #If we want maximum projection images\n",
-    "    if max_intensity_projection == True:\n",
-    "        channel_cyto,channel_nuclei = nd2_max_projection (nd2_object)\n",
+    "        if max_intensity_projection is True:\n",
+    "            channel_cyto,channel_nuclei = nd2_max_projection (nd2_object)\n",
     "\n",
-    "  #If we want any focal plane\n",
-    "    else:\n",
-    "        #Import cytoplasm image at desired focal plane\n",
-    "        nd2_object.default_coords['c'] = 0\n",
-    "        channel_cyto = nd2_object[focal_plane_cyto]\n",
+    "    #If we want any focal plane\n",
+    "        else:\n",
+    "            #Import cytoplasm image at desired focal plane\n",
+    "            nd2_object.default_coords['c'] = 0\n",
+    "            channel_cyto = nd2_object[focal_plane_cyto]\n",
     "\n",
-    "        #Import nuclei image at desired focal plane\n",
-    "        nd2_object.default_coords['c'] = 1\n",
-    "        channel_nuclei = nd2_object[focal_plane_nuclei]\n",
-    "        nd2_object.close()\n",
-    "\n",
+    "            #Import nuclei image at desired focal plane\n",
+    "            nd2_object.default_coords['c'] = 1\n",
+    "            channel_nuclei = nd2_object[focal_plane_nuclei]\n",
     "\n",
     "    channel_cyto_no_saturation =  channel_cyto\n",
     "\n",
@@ -175,7 +159,7 @@
     "\n",
     "    mask_nuclei = ((nuclei_image > thresh_nuclei)*1).astype('float32')\n",
     "    \n",
-    "    if show_results == True:\n",
+    "    if show_results is True:\n",
     "        plt.figure(figsize = (20,5))\n",
     "        plt.subplot(1,2,1)\n",
     "        plt.imshow(stack[2,:,:])\n",
@@ -188,14 +172,16 @@
     "    return mask_nuclei\n",
     "\n",
     "#Segments the nucleus. Pass the 3D image stack and run cellpose for nuclei\n",
-    "def nuclei_segmentation_cellpose(stack,diameter = 80,flow_threshold = 0,use_gpu = False,show_results = None):\n",
+    "def nuclei_segmentation_cellpose(stack,diameter = 80,flow_threshold = 0,use_gpu = False,\n",
+    "                                 show_results = None):\n",
     "    #Blur nuclei image\n",
     "    nuclei_image = gaussian(stack[2,:,:],1)\n",
     "\n",
     "    model = models.Cellpose(gpu=use_gpu, model_type='nuclei',net_avg=False)\n",
-    "    mask_nuclei, _, _, _ = model.eval(nuclei_image, diameter, flow_threshold=flow_threshold, channels=[0,0])\n",
+    "    mask_nuclei, _, _, _ = model.eval(nuclei_image, diameter, \n",
+    "                                      flow_threshold=flow_threshold, channels=[0,0])\n",
     "    \n",
-    "    if show_results == True:\n",
+    "    if show_results is True:\n",
     "        plt.figure(figsize = (20,5))\n",
     "        plt.subplot(1,2,1)\n",
     "        plt.imshow(stack[2,:,:])\n",
@@ -209,8 +195,12 @@
     "\n",
     "#Function to segment the cells using Cellpose\n",
     "def cell_segmentation(stack,diameter = 200,flow_threshold = 0,use_gpu = False,show_results = False):\n",
+    "\n",
     "    model = models.Cellpose(gpu=use_gpu, model_type='cyto',net_avg=False)\n",
-    "    mask_cyto, _, _, _ = model.eval(stack, diameter=diameter, flow_threshold=flow_threshold, channels=[2,3])\n",
+    "\n",
+    "    mask_cyto, _, _, _ = model.eval(stack, diameter=diameter, \n",
+    "                                    flow_threshold=flow_threshold, channels=[2,3])\n",
+    "\n",
     "    if show_results == True:\n",
     "        plt.figure(figsize = (15,15))\n",
     "        segmentation_results = mark_boundaries(stack[1,:,:],mask_cyto)\n",
@@ -220,12 +210,9 @@
     "\n",
     "\n",
     "#Function to segment LC3 dots using white tophot and manual thresholding\n",
-    "def LC3_segmentation(stack,mask,threshold,tophat_size = 5,minimum_dot_size = 0,display_results = False):\n",
-    "    #image: raw max_intensity projection of cellular channel as input image (No image saturation works best)\n",
+    "def LC3_segmentation(stack,mask,threshold,tophat_size = 5,\n",
+    "                     minimum_dot_size = 0,display_results = False):\n",
     "    #mask: cytoplasm mask (no nuclei)\n",
-    "    #threshold: value to segment the proteins\n",
-    "    #plot_results: if true, will show images of steps\n",
-    "    # minimum_dot_size: removes leftover dots below this threshold area\n",
     "    \n",
     "    #Use cyto channel\n",
     "    image = stack[1,:,:]\n",
@@ -265,15 +252,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "#1. Enter the filepath of the folder containing the images to analyze\n",
-    "filepath = '/Users/robertwelch/Desktop/SciLifeLab/LCI Workshop/Chiara'\n",
+    "filepath = ''\n",
     "\n",
     "#2. Run cell segmentation with GPU?:\n",
-    "use_gpu = False # if available, set to: True. Will automatically use CPU if no GPU found.\n",
+    "use_gpu = False # if available, set to: True. Will automatically use CPU if no GPU is found.\n",
     "\n",
     "#3. Most Important Parameters to tune - LC3+ Detection parameters \n",
     "threshold_LC3 = 0.08 # Intensity threshold (Larger value results in less dots). Typical range: 0.03 - 0.2\n",
@@ -285,7 +272,7 @@
     "flow_threshold_cyto = 0 # Increase if cell segmentation if missing cells (usually around 0-0.9)\n",
     "\n",
     "#5. Nuclei Segmentation, useful only if nuclei segmentation is failing\n",
-    "nuclei_threshold = 0.06 #Threshold for nuclei segmentation.\n",
+    "nuclei_threshold = 0.06 #Threshold for nuclei segmentation. (Increase if )\n",
     "\n",
     "#6. Image Export resolution\n",
     "output_images = True #True or False. If True, will save segmentation images in Results folder. Will slow down processing.\n",
@@ -301,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -309,13 +296,15 @@
      "output_type": "stream",
      "text": [
       "Images Analyzed: 0\n",
-      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/LCI Workshop/Chiara/1.5x.nd2\n",
-      "2022-02-09 09:21:31,344 [INFO] >>>> using CPU\n",
-      "2022-02-09 09:21:31,454 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-02-09 09:22:04,114 [INFO] >>>> TOTAL TIME 32.66 sec\n",
-      "2022-02-09 09:22:04,129 [INFO] >>>> using CPU\n",
-      "2022-02-09 09:22:04,251 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-02-09 09:22:08,941 [INFO] >>>> TOTAL TIME 4.69 sec\n",
+      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/Images/oneImage/WellB04_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0002.nd2\n",
+      "2022-02-11 10:22:20,358 [INFO] >>>> using CPU\n",
+      "2022-02-11 10:22:20,473 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-02-11 10:22:24,885 [INFO] >>>> TOTAL TIME 4.41 sec\n",
+      "Images Analyzed: 1\n",
+      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/Images/oneImage/WellB02_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0000.nd2\n",
+      "2022-02-11 10:22:30,995 [INFO] >>>> using CPU\n",
+      "2022-02-11 10:22:31,089 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-02-11 10:22:35,754 [INFO] >>>> TOTAL TIME 4.66 sec\n",
       "Finished, all images analyzed.\n"
      ]
     }
@@ -394,7 +383,7 @@
     "        new_excel.to_excel(results_path,index = False)\n",
     "\n",
     "    #Save Tiff. Image of results\n",
-    "    if output_images == True:\n",
+    "    if output_images is True:\n",
     "        fig,ax = plt.subplots(1,3)\n",
     "        fig.set_size_inches(20,20)\n",
     "        \n",
