Fixed minimum dot size bug

--- a/Cellpose-Segmentation.ipynb
+++ b/Cellpose-Segmentation.ipynb
@@ -227,7 +227,7 @@
     "\n",
     "    #Removes dots below specified area if needed\n",
     "    if minimum_dot_size > 0 :\n",
-    "        LC3_segmented = remove_small_objects(np.bool_(LC3_segmented),min_size = 3)\n",
+    "        LC3_segmented = remove_small_objects(np.bool_(LC3_segmented),min_size = minimum_dot_size)\n",
     "\n",
     "    #Show overlayed image if needed\n",
     "    if display_results == True:\n",
